--- a/layouts/page/covid.html
+++ b/layouts/page/covid.html
@@ -7,7 +7,7 @@
       <div class="service service-single">
         <h1 class="title">{{.Title}}</h1>
         <div class="content mt-4">{{.Content}}</div>
-        <img alt="Car safety graphic" class="intro-image{{ if .Params.intro_image_absolute }} intro-image-absolute{{ end }}{{ if .Params.intro_image_hide_on_mobile }} intro-image-hide-mobile{{ end }}" src="{{ .Params.car_graphic | relURL }}" />
+        <img alt="Car safety graphic" class="info-graphic" src="{{ .Params.car_graphic | relURL }}" />
         <a href="https://www.usatoday.com/story/opinion/2020/04/22/coronavirus-car-protect-yourself-column/5166146002/">source</a>
       </div>
     </div>
